[metadata]
name = G4 
description = Generalized Germline Gene Gateway
long_description = file: README.md
long_description_content_type = text/markdown
author = Jordan R. Willis
author_email = "Jordan R. Willis" <jwillis0720@gmai.com>
license = MIT
version = 0.0.1
license_file = LICENSE
platforms = any
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Science/Research
	License :: MIT License
	Operating System :: MacOS
	Operating System :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.10::Only
	Topic :: Scientific/Antibodies
project_urls =
	Bug Tracker = https://github.com/SchiefLab/G4/issues
	Source Code = https://github.com/SchiefLab/G4.git

[options]
packages = find:
python_requires = >=3.10 
include_package_data = True
zip_safe = False
package_dir=
    =src
py_modules= module
install_requires =
	fastapi==0.84.0
	pymongo[srv]==4.2.0
	requests==2.28.1
[options.packages.find]
where=src

[options.extras_require]
dev=
	pytest==7.1.3
	coverage==6.4.4

[options.entry_points]
console_scripts =
	G4 = g4.app:g4

[bumpversion:file:.bump2version.cfg]
